--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             g = Girl(<span class="string">"Gio Paula"</span>);<br/> -->
             <span class="comments"># Dedico a minha grande amiga :) </span><br/>
             <!-- a.meet(g)<br/> -->
-            <span class="comments">###### Ka <3</span><br/>
+            <span class="comments">###### Kaa <3</span><br/>
             <!-- a.confess(g)<br/>
             <span class="comments"></span><br/>
             a.accepted(g)<br/>
