--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <span class="comments">##</span><br/>
             <!-- a = Boy(<span class="string">"Asafe"</span>);<br/>
             g = Girl(<span class="string">"Gio Paula"</span>);<br/> -->
-            <span class="comments"># Dedico a minha grande amiga :) </span><br/>
+            <span class="comments"># Dedico para uma gatinha muito especial <3 :) </span><br/>
             <!-- a.meet(g)<br/> -->
-            <span class="comments">###### Kaa <3</span><br/>
+            <span class="comments">######<3</span><br/>
             <!-- a.confess(g)<br/>
             <span class="comments"></span><br/>
             a.accepted(g)<br/>
