--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
-                    Somos amigos a muito tempo ;)
+                    Nosso tempo juntos <3 ;)
                     <div id="elapseClock"></div>
                 </div>
                 <div id="loveu">
@@ -81,7 +81,7 @@
     var offsetY = $("#loveHeart").height() / 2 - 55;
     var together = new Date();
     // 此处月份介于 0 ~ 11 之间。用本地时间表示，如 8 月要用 7 表示。
-    together.setFullYear(2018, 1, 1);
+    together.setFullYear(2024, 1, 1);
     together.setHours(21);
     together.setMinutes(0);
     together.setSeconds(0);
