--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
-                    Nosso tempo juntos <3 ;)
+                    Nosso tempo juntos ;)
                     <div id="elapseClock"></div>
                 </div>
                 <div id="loveu">
@@ -81,8 +81,8 @@
     var offsetY = $("#loveHeart").height() / 2 - 55;
     var together = new Date();
     // 此处月份介于 0 ~ 11 之间。用本地时间表示，如 8 月要用 7 表示。
-    together.setFullYear(2024, 1, 1);
-    together.setHours(21);
+    together.setFullYear(2024, 0, 1); // Ajuste o mês para janeiro (0) e o dia para 1.
+    together.setHours(0);
     together.setMinutes(0);
     together.setSeconds(0);
     together.setMilliseconds(0);
@@ -108,6 +108,28 @@
 
         adjustCodePosition();
         $("#code").typewriter();
+    }
+
+    function timeElapse(together) {
+        var current = new Date();
+        var seconds = (Date.parse(current) - Date.parse(together)) / 1000;
+        var days = Math.floor(seconds / (3600 * 24));
+        seconds = seconds % (3600 * 24);
+        var hours = Math.floor(seconds / 3600);
+        if (hours < 10) {
+            hours = "0" + hours;
+        }
+        seconds = seconds % 3600;
+        var minutes = Math.floor(seconds / 60);
+        if (minutes < 10) {
+            minutes = "0" + minutes;
+        }
+        seconds = seconds % 60;
+        if (seconds < 10) {
+            seconds = "0" + seconds;
+        }
+        var result = '<span class="digit">' + days + '</span> dias <span class="digit">' + hours + '</span> horas <span class="digit">' + minutes + '</span> minutos <span class="digit">' + seconds + "</span> segundos";
+        $("#elapseClock").html(result);
     }
 </script>
 </body>
